# linkedin-job-classifier

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  documentation.yml  examples.py  indice_de_palavras.txt  nlp_helpers.py  pyproject.toml  requirements.txt  scrapper.py
modelagem/: Modelagem.ipynb
nlp_model/: saved_model.pb
nlp_model/variables/: variables.data-00000-of-00001  variables.index
scraper/: scraper.py
streamlit_app/: app.py  examples.py  nlp_helpers.py  vocab.txt
